@@ -50,7 +50,7 @@ public:
         const InspectApi*, Module*, SnortConfig*, const char* name = nullptr);
 
     static void free_inspector(Inspector*);
-    static InspectSsnFunc get_session(const char* key);
+    static InspectSsnFunc get_session(uint16_t proto);
 
     static InspectorType get_type(const char* key);
     static Inspector* get_inspector(const char* key, bool dflt_only = false);
